--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-player": "^2.8.2",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
