--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-player": "^2.8.2",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
