--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^6.15.1",
     "react-player": "^2.8.2",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
